# netology_async

async_1/: CMakeLists.txt  main.cpp
async_2/: CMakeLists.txt  main.cpp
